--- a/documents/Cuarto/Primer Cuatrimestre/Análisis Funcional/Tema_0.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Análisis Funcional/Tema_0.tex
@@ -439,7 +439,7 @@ Recordemos que un espacio de Hilbert es un par $(H, (\cdot, \cdot))$ donde $H$ e
                 \|T(x)\| \leq N\|x\| \leq N \|x\| < NR = M
             \end{gather*}
             y tenemos la inclusión que queríamos probar.
-            \item [(iv)$\Rightarrow$(ii) )] Por hipótesis tenemos que si $\|x\|<1$ entonces $\|T(x)\|\leq R$ y queremos probar que $\forall \veps >0 \ \ \exists \delta>0$ tal que si $\|x\|<\delta$, entonces $\|T(x)\|<\veps$. Tomamos $\delta = \frac{\veps}{2R}$ y como $x\in E$, entonces $\|x\|<\delta$ y tenemos que
+            \item [(iv)$\Rightarrow$(ii) )] Por hipótesis tenemos que si $\|x\|<1$ entonces $\|T(x)\|\leq R$ y queremos probar que $\forall \veps >0 \ \ \exists \delta>0$ tal que si $\|x\|<\delta$, entonces $\|T(x)\|<\veps$. Tomamos $\delta = \frac{\veps}{2R}$ y suponiendo que $\|x\|<\delta$ tenemos que
             \begin{gather*}
                 \|T(x)\| = \left\|T\left(\frac{x}{2\|x\|}\cdot 2 \|x\|\right)\right\| = 2\|x\| \left\|T\left(\frac{x}{2\|x\|}\right)\right\| \leq 2\|x\|R < 2\delta R = \veps
             \end{gather*}
