--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_0.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_0.tex
@@ -1,4 +1,4 @@
-\chapter*{Tema 0. Conexión por arcos}
+\chapter*{Introducción. Conexión por arcos}
 
 \section{Conexión}
 
@@ -197,6 +197,17 @@
 \end{teo}
 
 \begin{definicion}
-    
+    Dados un e.t. $X$ y un punto $x_0\in X$, llamamos \textbf{componente arcoconexa} de $x_0$ al mayor arcoconexo en $X$ que contiene a $x_0$.
 \end{definicion}
+
+\begin{teo}
+    Las componentes arcoconexas de un e.t. $X$ forman una partición de $X$ en subconjuntos arcoconexos de $X$ maximales.
+\end{teo}
+
+\begin{ejemplo}\ \\
+
+    [Insertar gráfica]\\
+
+    Tiene dos componentes arcoconexas: $\{(0,0)\}$ , $\bigcup\limits_{u\in \bb{N}\cup\{0\}}X_n$
+\end{ejemplo}
 
