--- a/documents/Cuarto/Primer Cuatrimestre/Álgebra III/Tema_0.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Álgebra III/Tema_0.tex
@@ -227,3 +227,96 @@ Recordaremos ahora los conceptos de subanillo y subcuerpo. Para ello consideramo
         \item $Irr(e^{\frac{i2\pi}{3}}, \bb{Q})$. Sabemos que $e^{\frac{i2\pi}{3}}$ es raíz de $x^3-1\in \bb{Q}$, sin embargo no es irreducible ya que $x^3 -1 = (x-1)(x^2+x+1)$ y como $(x^2+x+1)$ es irreducible (si se calculan las raíces es fácil ver que no están en $\bb{Q}$) y $e^{\frac{i2\pi}{3}}$ sigue siendo raíz suya por lo que $Irr(e^{\frac{i2\pi}{3}}, \bb{Q}) = (x^2+x+1)$. Una $\bb{Q}-$base de $\bb{Q}(e^{\frac{i2\pi}{3}})$ es $\{1, e^{\frac{i2\pi}{3}}\}$ y $[\bb{Q}(e^{\frac{i2\pi}{3}}), \bb{Q}]=2$.
     \end{itemize}
 \end{ejemplo}
+
+\begin{lema}[de la torre]
+    Sean $F \leq K \leq L$ extensiones. Entonces se tiene que 
+    \begin{gather*}
+        F \leq L \text{ es finita} \sii 
+        \begin{array}{c}
+            F \leq K\\
+            \text{ y }\\
+            K\leq L
+        \end{array}
+        \text{ son finitos}
+    \end{gather*}
+    Además, $[L:F] = [L:K][K:F]$.
+
+    \begin{proof}\
+        \begin{itemize}
+            \item[$\Rightarrow$)] Supongamos $F\leq J$ finito. Encones como $K$ es un $F$-subespacio vectorial de $K$ entonces $F\leq K$ es finita. Si tomo $\{\alpha_1, \dots, \alpha_t\}$ generados del $F$-espacio vectorial $L$, entonces $\{\alpha_1, \dots, \alpha_t\}$ también es un sistema de generadores del $K$-subespacio vectorial de $L$ por lo que $K\leq L$ es finito.
+
+            \item[$\Leftarrow$)] Sean $\{u_1, \dots, u_n\}$ base de $L$ sobre $K$ y $\{v_1, \dots, v_m\}$ base de $K$sobre $F$ . Afirmo que $\{u_iv_j: 1 \leq i \leq n,\ \ 1\leq j \leq m\}$ es una $F$-base de $L$ (rutinario).
+        \end{itemize}
+    \end{proof}
+\end{lema}
+
+El nombre de este lema proviene de que cuando se tienen extensiones de cuerpos $F_1\leq F_2\leq \dots \leq F_s$, se suele decir que tenemos una torre de cuerpos. Haciendo una inducción sobre este lema es fácil ver que se puede usar para un número finito de cuerpos (la torre).
+
+\begin{prop}
+    Sea $F\leq K$ una extensión de cuerpos, $\alpha \in K$. Entonces se tiene
+    \begin{gather*}
+        \alpha \text{ alegraico sobre } F \sii \exists F\leq K\leq K \text{ tal que } F\leq L \text{ finita y }\alpha \in L
+    \end{gather*}
+
+    \begin{proof}\
+        \begin{itemize}
+            \item[$\Rightarrow$)] Supongamos euqe $\alpha$ es algorítmico en $F$. Tomo $L=F(\alpha)$ y por la proposición vista anteriormente esto se verifica.
+            \item[$\Leftarrow$)] Sea $\alpha\in L$ con $F\leq L$ finito. El lema de la torre afirma que $F\leq F(\alpha)$ es finita. En geometría I y álgebra I se estudió que $\{1, \alpha, \alpha^2, \dots, \alpha^n, \dots\}$ es $F$-linealmente dependiente por lo que $\exists m \geq 1$ tal que $\alpha^m$ es $F$-linealmente dependiente de $\{1, \alpha, \dots, \alpha^{m-1}\}$ por lo que $\alpha^m = \sum\limits_{i=0}^{m-1} a_i\alpha^i$ con $a_i\in F$ por lo que $\alpha$ es algorítmico en $F$.
+        \end{itemize}
+    \end{proof}
+\end{prop}
+
+\begin{definicion}
+    Sea $F\leq K$ una extensión de cuerpos, se dice \textbf{algebraica} si todo $\alpha\in K$ es algebraico sobre $F$.
+\end{definicion}
+
+\begin{teo}
+    Una extensión $F\leq G$ es finita si y solo si es algebraica y finitamente generada.
+    \begin{proof}\
+        \begin{itemize}
+            \item[$\Rightarrow$)] Tomo $\{u_1, \dots, u_t\}$ una $F$-base de $K$, por lo que $K=F(u_1, \dots, u_t)$ (la otra implicación no es cierta en general). Además, si $\alpha\in K$, entonces $F\leq F(\alpha)$ y la proposición anterior nos da esta implicación.
+            \item[$\Leftarrow$)] Sea $K=F(\alpha_1, \dots, \alpha_n)$ y $\alpha_i$ es algebraico sobre $F$ para todo $i\in \{1,\dots,n\}$. Por el lema de la torre tenemos que $F\leq F(\alpha_1)\leq \dots\leq F(\alpha_1, \dots, \alpha_n)$ cada uno es una extensión finita de la anterior, por lo que $F(\alpha_1, \dots, \alpha_n)\geq F$ es finita.
+        \end{itemize}
+    \end{proof}
+\end{teo}
+
+\begin{observacion} % TODO: formatear
+    Hemos visto que si $\alpha_1, \dots, \alpha_n \in K$ y $\alpha_1$ es algebraico sobre $F$, $\alpha_2$ es algebraico sobre $F(\alpha_1)$,\dots, $\alpha_n$ es algebraico sobre $F(\alpha_1, ..., \alpha_n)$, entonces $[F(\alpha_1, \dots, \alpha_n):F]\leq \infty$.
+\end{observacion}
+
+\begin{coro}
+    Sea $F \leq K$ una extensión de cuerpos y definimos
+    \begin{gather*}
+        \Lambda = \text{conjunto de elementos de }K\text{ algebraicos sobre }F
+    \end{gather*}
+    entonces $\Lambda$ es un subcuerpo de $K$ y $F\leq \Lambda$ es algebraica
+    \begin{proof}
+        Veamos primero que es un anillo. Es claro que $1\in \Lambda$ y nos queda ver que
+        \begin{gather*}
+            \alpha, \beta \in \Lambda \Rightarrow \left\{
+            \begin{array}{l}
+                \alpha - \beta \in \Lambda\\
+                \alpha\beta \in \Lambda
+            \end{array}
+            \right.
+        \end{gather*}
+        Sabemos que $F\leq F(\alpha, \beta)$ es algebraica y $\alpha\beta, \alpha - \beta \in F(\alpha, \beta)$.
+        Si $\alpha\neq 0$, entonces $\alpha^{-1}\in F(\alpha)$, luego $\alpha^{-1}\in \Lambda$.
+    \end{proof}
+\end{coro}
+
+\begin{notacion}
+    $\Lambda$ se llama \textbf{clausura algebraica} de $F$ en $K$.
+\end{notacion}
+
+\begin{ejemplo}
+    Si pojngo $F=\bb{Q}$ y $K=\bb{C}$ obtento la llamada clausura algebraica (en $\bb{C}$).
+\end{ejemplo}
+
+\begin{notacion}
+    $\overline{\bb{Q}}$ sus elementos son los números algebraicos
+\end{notacion}
+
+\begin{ejemplo}
+    $[\overline{\bb{Q}} : \bb{Q}]= \infty$ por que $\bb{Q}(\sqrt[n]{2})\leq \overline{\bb{Q}}$ y $Irr(\sqrt[n]{2}, \bb{Q}) = x^n -2$ ya que por el criterio de Eisenstein\footnote{si no te acuerdas pues lo recuerdas} se tiene que $x^n -2$ es irreducible.
+\end{ejemplo}
