--- a/documents/Cuarto/Primer Cuatrimestre/Álgebra III/Tema_0.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Álgebra III/Tema_0.tex
@@ -320,3 +320,7 @@ El nombre de este lema proviene de que cuando se tienen extensiones de cuerpos $
 \begin{ejemplo}
     $[\overline{\bb{Q}} : \bb{Q}]= \infty$ por que $\bb{Q}(\sqrt[n]{2})\leq \overline{\bb{Q}}$ y $Irr(\sqrt[n]{2}, \bb{Q}) = x^n -2$ ya que por el criterio de Eisenstein\footnote{si no te acuerdas pues lo recuerdas} se tiene que $x^n -2$ es irreducible.
 \end{ejemplo}
+
+\begin{ejemplo}
+    $W\in \bb{C}$ 
+\end{ejemplo}
