--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_0.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_0.tex
@@ -124,6 +124,42 @@
     \begin{gather*}
         X_0=\{1\}\times [0,1] \hspace{0.5cm}\text{ y } \hspace{0.5cm} X_n = [0,1]\times \left\{\frac{1}{n}\right\},\ n\in \bb{N}
     \end{gather*}
+
+    \begin{figure}[H]
+        \centering
+        \begin{tikzpicture}
+            \begin{axis}[
+                axis lines=left,
+                height=8cm, width=10cm,
+                xmin=-0.2, xmax=1.2,
+                ymin=0, ymax=1.2,
+                xtick={0,1},
+                ytick={0,0.5,1},
+                yticklabels={$0$,$\tfrac{1}{2}$,$1$},
+                grid=major,
+                axis x line=middle, % eje X en y=0
+                axis y line=middle, % eje Y en x=0
+                legend style={at={(1.2,1)},anchor=north east} % posición de la leyenda
+            ]
+                % Tramos constantes
+
+                \addplot[very thick,blue!60!black] coordinates {(1,0) (1,1)};
+                \addlegendentry{$X_0$}
+
+                \addplot[very thick,red!60!black] coordinates {(0,1) (1,1)};
+                \addlegendentry{$X_n$}
+
+                \foreach \i in {2,...,100} {
+                    \addplot[very thick,red!60!black, forget plot] coordinates {(0,1/\i) (1,1/\i)};
+                }
+
+                % Puntoo
+                \addplot[only marks,mark=*,green!60!black] coordinates {(0,0)};
+                \addlegendentry{$(0,0)$}
+            \end{axis}
+        \end{tikzpicture}
+    \end{figure}
+
     Llamamos $X=\{(0,0)\}\cup \left(\bigcup\limits_{n\in \bb{N}\cup \{0\}}X_n\right)$ y queremos ver que $X$ es conexo pero no es arcoconexo.\\
 
     Si tomamos la segunda parte de esta unión, es decir, 
@@ -204,10 +240,43 @@
     Las componentes arcoconexas de un e.t. $X$ forman una partición de $X$ en subconjuntos arcoconexos de $X$ maximales.
 \end{teo}
 
-\begin{ejemplo}\ \\
+\begin{ejemplo} En el ejemplo que ya se trabajó se puede ver que el conjunto $X$ que era
 
-    [Insertar gráfica]\\
+    \begin{figure}[H]
+        \centering
+        \begin{tikzpicture}
+            \begin{axis}[
+                axis lines=left,
+                height=8cm, width=10cm,
+                xmin=-0.2, xmax=1.2,
+                ymin=0, ymax=1.2,
+                xtick={0,1},
+                ytick={0,0.5,1},
+                yticklabels={$0$,$\tfrac{1}{2}$,$1$},
+                grid=major,
+                axis x line=middle, % eje X en y=0
+                axis y line=middle, % eje Y en x=0
+                legend style={at={(1.2,1)},anchor=north east} % posición de la leyenda
+            ]
+                % Tramos constantes
 
-    Tiene dos componentes arcoconexas: $\{(0,0)\}$ , $\bigcup\limits_{u\in \bb{N}\cup\{0\}}X_n$
+                \addplot[very thick,blue!60!black] coordinates {(1,0) (1,1)};
+                \addlegendentry{$X_0$}
+
+                \addplot[very thick,red!60!black] coordinates {(0,1) (1,1)};
+                \addlegendentry{$X_n$}
+
+                \foreach \i in {2,...,100} {
+                    \addplot[very thick,red!60!black, forget plot] coordinates {(0,1/\i) (1,1/\i)};
+                }
+
+                % Puntoo
+                \addplot[only marks,mark=*,green!60!black] coordinates {(0,0)};
+                \addlegendentry{$(0,0)$}
+            \end{axis}
+        \end{tikzpicture}
+    \end{figure}
+
+    tiene dos componentes arcoconexas: $\{(0,0)\}$ , $\bigcup\limits_{u\in \bb{N}\cup\{0\}}X_n$
 \end{ejemplo}
 
