--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -7,6 +7,70 @@
     \begin{gather*}
         H(x,0) = f(x) \hspace{0.5cm} \text{ y } \hspace{0.5cm} H(x,1) = g(x) \ \ \ \forall x\in X
     \end{gather*}
+
+    \begin{figure}[H]
+        \centering
+        \begin{tikzpicture}[scale=0.8]
+            \shorthandoff{>}
+
+            % Cono 
+            \draw[dashed] (-3,2) ellipse (1 and 0.5);
+            \draw[dashed] (-3,-2) ellipse (1 and 0.5);
+
+            \draw (-4,-2.5) -- (-4,2.5);
+            \draw (-2,-2.5) -- (-2,2.5);
+
+            % Flecha f
+            \node at (0,1) {$f$};
+            \draw[->, blue] (-1,0.7) -- (1,0.7);
+
+            % Flecha g
+            \node at (0,-1) {$g$};
+            \draw[->, red] (-1,-0.7) -- (1,-0.7);
+
+            % Leyenda H
+            \node[text width=3cm, anchor=west] at (6.5,0) {$H$ a lo largo del tiempo};
+            \draw[thick, green!60!black] (5.75,0)--(6.4,0);
+
+            % Imagen de f
+            \draw[dashed, blue] (3,0) ellipse (1 and 0.5);
+            \draw[blue] plot[smooth] coordinates {
+                (1.2,-2.5) (2,0) (1.2,2.5)
+            };
+            \draw[blue] plot[smooth] coordinates {
+                (4.8,-2.5) (4,0) (4.8,2.5)
+            };
+
+            % Imagen de g
+            \draw[dashed, red] (3,2) ellipse (0.5 and 0.25);
+            \draw[dashed, red] (3,-2) ellipse (0.5 and 0.25);
+            \draw[red] plot[smooth] coordinates {
+                (2.25,2.5) (2.5,2) (2.2,1) (2.5,0) (2.2,-1) (2.5,-2) (2.25,-2.5)
+            };
+            \draw[red] plot[smooth] coordinates {
+                (3.75,2.5) (3.5,2) (3.8,1) (3.5,0) (3.8,-1) (3.5,-2) (3.75,-2.5)
+            };
+
+            % Intermedios derecha
+            \draw[green!60!black] plot[smooth] coordinates {
+                (4.1,2.5) (3.8,2) (3.95,1) (3.65,0) (3.95,-1) (3.8,-2) (4.1,-2.5)
+            };
+            \draw[green!60!black] plot[smooth] coordinates {
+                (4.45,2.5) (4.2,2) (4.1,1) (3.8,0) (4.1,-1) (4.2,-2) (4.45,-2.5)
+            };
+
+            % Intermedios izquierda
+            \draw[green!60!black] plot[smooth] coordinates {
+                (1.9,2.5) (2.2,2) (2.05,1) (2.35,0) (2.05,-1) (2.2,-2) (1.9,-2.5)
+            };
+            \draw[green!60!black] plot[smooth] coordinates {
+                (1.55,2.5) (1.8,2) (1.9,1) (2.2,0) (1.9,-1) (1.8,-2) (1.55,-2.5)
+            };
+
+
+        \end{tikzpicture}
+    \end{figure}
+
 \end{definicion} 
 
 \begin{definicion}
