--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -290,7 +290,7 @@
     \end{enumerate}
     \begin{proof}\
         \begin{enumerate}
-            \item[(i)] Desarrollemos lo que estamos calculando
+            \item[(i)] Desarrollemos cada expresión
             \begin{figure}[H]
                 \centering
                 \begin{tikzpicture}
