--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -125,8 +125,8 @@
             \node[blue] at (1,-0.2) {$\beta$};
 
             % Textos
-            \node at (1,-2.5) {No equivalenes};
-            \node at (-3,-2.5) {Equivalenes};
+            \node at (1,-2.5) {No equivalentes};
+            \node at (-3,-2.5) {Equivalentes};
 
         \end{tikzpicture}
     \end{figure}
